<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/gradient_background"
    tools:context=".ui.authentication.UserSignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_signupform_title"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Account"
            android:textColor="@color/colorSecondary" />

        <ProgressBar
            android:id="@+id/progressbar_signupform_questionprogress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="100"
            android:progress="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_signupform_questioncounterprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/1"
                android:textColor="@color/colorSecondaryDark" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="326dp"
        android:layout_height="470dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:animateLayoutChanges="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout_signupform_buttonlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textview_signupform_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Placeholder Question Ipsium Loresium usi li sentorium au porien lamen ahru vindicato paresia?"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorSecondaryLight"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textview_signupform_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Placeholder description Ipsium Loresium usi li sentorium au porien lamen ahru vindicato paresia."
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:visibility="gone" />

        <!--Radio Group Question-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialcard_signup_radioquestioncard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardCornerRadius="20dp">

            <RadioGroup
                android:id="@+id/radiogroup_signupform_optionsGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical">


            </RadioGroup>

        </com.google.android.material.card.MaterialCardView>

        <!--Short Text Question-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialcard_signupform_shorttextquestioncard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardCornerRadius="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_signup_shortanswerinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <EditText
                    android:id="@+id/edittext_signupform_shortanswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="Type Answer"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


        </com.google.android.material.card.MaterialCardView>

        <!--Password Question -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialcard_signupform_passwordquestioncard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinputlayout_signup_passwordinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:passwordToggleDrawable="@drawable/password_paintexttoggle_selector"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edittext_signupform_passwordanswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinputlayout_signup_passwordverifyinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:passwordToggleDrawable="@drawable/password_paintexttoggle_selector"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edittext_signupform_passwordverifyanswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="Verify Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageview_signupform_passwordsmatch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_library_add_check_24"
                    android:visibility="gone"
                    app:tint="@color/colorPrimaryLight" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!--Boolean Question -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialcard_signupform_booleanbuttonquestioncard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_signupform_booleanbutton1"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="OPTION 1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_signupform_booleanbutton2"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="OPTION 2" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_signupform_buttonlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_signupform_next"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:drawableRight="@drawable/ic_baseline_chevron_right_24"
            android:text="Next"
            android:textColor="@color/colorSecondaryLight" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_signupform_submit"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="Submit"
            android:textColor="@color/colorSecondaryLight"
            android:visibility="gone" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>