...
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="4"
                                android:text="Account" />

                            <Button
                                android:id="@+id/button_settings_logout"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Logout"
                                android:textColor="@color/colorPrimary" />
...
